created fuul structured of page adn flex conditions

--- a/index.html
+++ b/index.html
@@ -23,24 +23,161 @@
             </div>
             <section class="section_ticket">
                 <div class="map-marker">
-    
+                    <object data="" type="" width="10px" height="10px">Marker svg</object>
                 </div>
                 <div class="section_ticket-info">
                     <div class="section_ticket-destination">
-                        <div class="section_ticket-destination_palce">
-                            <h3></h3>
+                        <div class="section_ticket-destination_place">
+                            <h3>Plymouth Meeting, Pennsylvania Testing Laboratory</h3>
                         </div>
                         <div class="section_ticket-destination_details">
-                            <p></p>
+                            <p>60 miles</p>
                             <a href="#">View Details</a>
                         </div>
                     </div>
                     <div class="section_ticket-price">
-
+                        <div class="section_ticket-price_time">
+                            <p>TURN AROUND TIME</p>
+                        </div>
+                        <div class="section_ticket-price_options">
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 1200.00</span>
+                                </div>
+                            </div>
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 900.50</span>
+                                </div>
+                            </div>
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 150.00</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="section_ticket-download">
-                    
+                    <object data="" type="" width="50px" height="50px">Download svg</object>
+                </div>
+            </section>
+            <section class="section_ticket">
+                <div class="map-marker">
+                    <object data="" type="" width="50px" height="50px">Marker svg</object>
+                </div>
+                <div class="section_ticket-info">
+                    <div class="section_ticket-destination">
+                        <div class="section_ticket-destination_place">
+                            <h3>Plymouth Meeting, Pennsylvania Testing Laboratory</h3>
+                        </div>
+                        <div class="section_ticket-destination_details">
+                            <p>60 miles</p>
+                            <a href="#">View Details</a>
+                        </div>
+                    </div>
+                    <div class="section_ticket-price">
+                        <div class="section_ticket-price_time">
+                            <p>TURN AROUND TIME</p>
+                        </div>
+                        <div class="section_ticket-price_options">
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 1200.00</span>
+                                </div>
+                            </div>
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 900.50</span>
+                                </div>
+                            </div>
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 150.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section_ticket-download">
+                    <object data="" type="" width="50px" height="50px">Downolad svg</object>
+                </div>
+            </section>
+            <section class="section_ticket">
+                <div class="map-marker">
+                    <object data="" type="" width="50px" height="50px">Marker svg</object>
+                </div>
+                <div class="section_ticket-info">
+                    <div class="section_ticket-destination">
+                        <div class="section_ticket-destination_place">
+                            <h3>Plymouth Meeting, Pennsylvania Testing Laboratory</h3>
+                        </div>
+                        <div class="section_ticket-destination_details">
+                            <p>60 miles</p>
+                            <a href="#">View Details</a>
+                        </div>
+                    </div>
+                    <div class="section_ticket-price">
+                        <div class="section_ticket-price_time">
+                            <p>TURN AROUND TIME</p>
+                        </div>
+                        <div class="section_ticket-price_options">
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 1200.00</span>
+                                </div>
+                            </div>
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 900.50</span>
+                                </div>
+                            </div>
+                            <div class="price_option-item">
+                                <div class="price_option-item_term">
+                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Day</label>
+                                </div>
+                                <div class="price_option-item_cost">
+                                    <span>$ 150.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section_ticket-download">
+                    <object data="" type="" width="50px" height="50px">Download svg</object>
                 </div>
             </section>
         </main>
