created positioneng of all alements jf tr page, make mediaqueries on 890px and 715px

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
             <section class="section_ticket">
                 <div class="map-marker">
-                    <object data="" type="" width="10px" height="10px">Marker svg</object>
+                    <object data="img/map.svg" type="image/svg+xml" ></object>
                 </div>
                 <div class="section_ticket-info">
                     <div class="section_ticket-destination">
                         <div class="section_ticket-destination_place">
-                            <h3>Plymouth Meeting, Pennsylvania Testing Laboratory</h3>
+                            <h4>Plymouth Meeting, Pennsylvania Testing Laboratory</h4>
                         </div>
                         <div class="section_ticket-destination_details">
                             <p>60 miles</p>
@@ -37,12 +37,12 @@
                     </div>
                     <div class="section_ticket-price">
                         <div class="section_ticket-price_time">
-                            <p>TURN AROUND TIME</p>
+                            <p>TURN AROUND TIME:</p>
                         </div>
                         <div class="section_ticket-price_options">
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <input type="radio" name="days" id="days-caheckbox">
                                     <label for="days-caheckbox">1 Day</label>
                                 </div>
                                 <div class="price_option-item_cost">
@@ -51,8 +51,8 @@
                             </div>
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
-                                    <label for="days-caheckbox">1 Day</label>
+                                    <input type="radio" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Days</label>
                                 </div>
                                 <div class="price_option-item_cost">
                                     <span>$ 900.50</span>
@@ -60,8 +60,8 @@
                             </div>
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
-                                    <label for="days-caheckbox">1 Day</label>
+                                    <input type="radio" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Week</label>
                                 </div>
                                 <div class="price_option-item_cost">
                                     <span>$ 150.00</span>
@@ -71,17 +71,17 @@
                     </div>
                 </div>
                 <div class="section_ticket-download">
-                    <object data="" type="" width="50px" height="50px">Download svg</object>
+                    <div class="download-img"><span><p>View more</p></span></div>
                 </div>
             </section>
             <section class="section_ticket">
                 <div class="map-marker">
-                    <object data="" type="" width="50px" height="50px">Marker svg</object>
+                    <object data="img/map.svg" type="image/svg+xml" ></object>
                 </div>
                 <div class="section_ticket-info">
                     <div class="section_ticket-destination">
                         <div class="section_ticket-destination_place">
-                            <h3>Plymouth Meeting, Pennsylvania Testing Laboratory</h3>
+                            <h4>Plymouth Meeting, Pennsylvania Testing Laboratory</h4>
                         </div>
                         <div class="section_ticket-destination_details">
                             <p>60 miles</p>
@@ -90,12 +90,12 @@
                     </div>
                     <div class="section_ticket-price">
                         <div class="section_ticket-price_time">
-                            <p>TURN AROUND TIME</p>
+                            <p>TURN AROUND TIME:</p>
                         </div>
                         <div class="section_ticket-price_options">
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <input type="radio" name="days" id="days-caheckbox">
                                     <label for="days-caheckbox">1 Day</label>
                                 </div>
                                 <div class="price_option-item_cost">
@@ -104,8 +104,8 @@
                             </div>
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
-                                    <label for="days-caheckbox">1 Day</label>
+                                    <input type="radio" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Days</label>
                                 </div>
                                 <div class="price_option-item_cost">
                                     <span>$ 900.50</span>
@@ -113,8 +113,8 @@
                             </div>
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
-                                    <label for="days-caheckbox">1 Day</label>
+                                    <input type="radio" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Week</label>
                                 </div>
                                 <div class="price_option-item_cost">
                                     <span>$ 150.00</span>
@@ -124,17 +124,17 @@
                     </div>
                 </div>
                 <div class="section_ticket-download">
-                    <object data="" type="" width="50px" height="50px">Downolad svg</object>
+                    <div class="download-img"><span><p>View more</p></span></div>
                 </div>
             </section>
             <section class="section_ticket">
                 <div class="map-marker">
-                    <object data="" type="" width="50px" height="50px">Marker svg</object>
+                    <object data="img/map.svg" type="image/svg+xml" ></object>
                 </div>
                 <div class="section_ticket-info">
                     <div class="section_ticket-destination">
                         <div class="section_ticket-destination_place">
-                            <h3>Plymouth Meeting, Pennsylvania Testing Laboratory</h3>
+                            <h4>Plymouth Meeting, Pennsylvania Testing Laboratory</h4>
                         </div>
                         <div class="section_ticket-destination_details">
                             <p>60 miles</p>
@@ -143,12 +143,12 @@
                     </div>
                     <div class="section_ticket-price">
                         <div class="section_ticket-price_time">
-                            <p>TURN AROUND TIME</p>
+                            <p>TURN AROUND TIME:</p>
                         </div>
                         <div class="section_ticket-price_options">
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
+                                    <input type="radio" name="days" id="days-caheckbox">
                                     <label for="days-caheckbox">1 Day</label>
                                 </div>
                                 <div class="price_option-item_cost">
@@ -157,8 +157,8 @@
                             </div>
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
-                                    <label for="days-caheckbox">1 Day</label>
+                                    <input type="radio" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Days</label>
                                 </div>
                                 <div class="price_option-item_cost">
                                     <span>$ 900.50</span>
@@ -166,8 +166,8 @@
                             </div>
                             <div class="price_option-item">
                                 <div class="price_option-item_term">
-                                    <input type="checkbox" name="days" id="days-caheckbox">
-                                    <label for="days-caheckbox">1 Day</label>
+                                    <input type="radio" name="days" id="days-caheckbox">
+                                    <label for="days-caheckbox">1 Week</label>
                                 </div>
                                 <div class="price_option-item_cost">
                                     <span>$ 150.00</span>
@@ -177,9 +177,10 @@
                     </div>
                 </div>
                 <div class="section_ticket-download">
-                    <object data="" type="" width="50px" height="50px">Download svg</object>
+                    <div class="download-img"><span><p>View more</p></span></div>
                 </div>
             </section>
+            
         </main>
         
     </div>
