complited markup of order-state

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <main class="main">
             <div class="order-state">
                 <ul class="order-state-list">
-                    <li class="order-state-item order-previus">My Cart</li>
-                    <li class="order-state-item order-current">Choose Lab</li>
-                    <li class="order-state-item order-next">Rentals Return</li>
-                    <li class="order-state-item order-next">Checkout</li>
+                    <li class="order-state-item order-previus">My Cart<span></span></li>
+                    <li class="order-state-item order-current">Choose Lab<span></span></li>
+                    <li class="order-state-item order-next">Rentals Return<span></span></li>
+                    <li class="order-state-item order-next">Checkout<span></span></li>
                     <li class="order-state-item order-next">Order Placed</li>
                 </ul>
             </div>
